--- a/app/templates/integrations/atlassian-confluence.html
+++ b/app/templates/integrations/atlassian-confluence.html
@@ -36,9 +36,9 @@
                                         <input type="hidden" name="id" id="config_id">
                                     {% endif %}
                                     <label for="name">Name:</label>
-                                    {{ form.name(class="form-control", placeholder="My Atlassian Confluence Connection") }}
+                                    {{ form.name(class="form-control", placeholder="e.g. My Atlassian Confluence Connection") }}
                                     <label for="email" class="input-label mt-2">Email:</label>
-                                    {{ form.email(class="form-control", placeholder="perforge.app@gmail.com") }}
+                                    {{ form.email(class="form-control", placeholder="e.g. perforge.app@gmail.com") }}
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
@@ -57,24 +57,24 @@
                                     </select>
                                     <div id="new_secret_fields" style="display: none; width: 100%;">
                                         <label for="new_secret_name" class="mt-2" style="display: block; text-align: center;">Secret Name:</label>
-                                        <input type="text" id="new_secret_name" class="form-control" placeholder="ATLASSIAN_CONFLUENCE_TOKEN">
+                                        <input type="text" id="new_secret_name" class="form-control" placeholder="e.g. ATLASSIAN_CONFLUENCE_TOKEN">
                                         <label for="new_secret_scope" class="mt-2" style="display: block; text-align: center;">Scope:</label>
                                         <select class="form-control" id="new_secret_scope">
                                             <option value="">ALL</option>
                                             <option value="project">PROJECT</option>
                                         </select>
                                         <label for="new_secret_value" class="mt-2" style="display: block; text-align: center;">Secret Value:</label>
-                                        <input type="password" id="new_secret_value" class="form-control" placeholder="my-super-secret-token">
+                                        <input type="password" id="new_secret_value" class="form-control" placeholder="e.g. my-super-secret-token">
                                     </div>
                                     <div id="tokenError" class="invalid-feedback" style="display: none;">
                                         Please select a token
                                     </div>
                                     <label for="org_url" class="mt-2">Organization url:</label>
-                                    {{ form.org_url(class="form-control", placeholder="https://perforge.atlassian.net") }}
+                                    {{ form.org_url(class="form-control", placeholder="e.g. https://perforge.atlassian.net") }}
                                     <label for="space_key" class="mt-2">Space key:</label>
-                                    {{ form.space_key(class="form-control", placeholder="PERFORGE") }}
+                                    {{ form.space_key(class="form-control", placeholder="e.g. PERFORGE") }}
                                     <label for="parent_id" class="mt-2">Parent id:</label>
-                                    {{ form.parent_id(class="form-control", placeholder="123456789") }}
+                                    {{ form.parent_id(class="form-control", placeholder="e.g. 123456789") }}
                                     <label for="is_default" class="mt-2">Is Default:</label>
                                     {{ form.is_default(class="form-control") }}
                                     <button class="btn btn-primary mt-5" type="submit">Save</button>
