--- a/app/templates/integrations/influxdb.html
+++ b/app/templates/integrations/influxdb.html
@@ -68,7 +68,7 @@
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
-                                        Please be aware that the default listener for JMeter is the first one, while the second one is a custom listener provided by mderevyandoaqa.
+                                        Please be aware that the default listener for JMeter is the first one.
                                       </div>
                                     </div>
                                     <label for="listener" class="input-label mt-2">Backend listener:</label>
